# Esterv.Utils.Updater

./: .gitignore  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md
.github/workflows/: build-test-install.yml  codeFormat.yml  qmllint.yml
examples/: CMakeLists.txt  coreApp.cpp  quickApp.cpp
examples/qml/: quickApp.qml
include/: qupdater.hpp
include/esterv/utils/: updater.hpp
qml/: UpdateBox.qml
src/: qupdater.cpp  updater.cpp
